--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "keywords": [],
   "author": "Tuany Brito",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "mongoose": "^6.3.0"
   }
 }
